--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,27 @@
 /* Add CSS Styling */
+.share-pink {
+    background-color: rgb(240, 170, 182);
+    font-family: "Verdana", "DejaVu Sans", sans-serif;
+}
+
+.add-font {
+    font-size: 24px;
+    font-weight: 500;
+}
+
+#use-blue {
+    color: blue;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+#use-blue {
+    font-size: 30px;
+    color: blue;
+}
+
+#use-green {
+    background-color: rgb(36, 199, 90);
+    font-size: 24px;
+    font-weight: bold;
+}
