--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.btn-prop {
+    font-size: 28px;
+    font-family: "Helvetica","Times New Roman", sans-serif;
+}
+
+.btn-1 {
+    background-color: black;
+    color: white;
+}
+
+.btn-2 {
+    background-color: yellow;
+    color: black;
+}
