--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,33 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 200px auto;
+  border: 10px solid white;
 }
 
 .title {
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom:5px;
   background: #e3f4ff;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 15px;
+  margin-bottom: 5px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  display: block;
+  padding: 8px 24px;
 }
